--- a/dict/kubernetes-website-ja.yml
+++ b/dict/kubernetes-website-ja.yml
@@ -34,3 +34,7 @@ rules:
     patterns:
       - Aggregationレイヤー
       - 集約レイヤー
+  - expected: リポジトリ
+    pattern:  リポジトリー
+  - expected: Pod
+    pattern:  ポッド
